fix : add overflow:hidden in second_wrap

--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -26,6 +26,7 @@
   height: 100vh;
   background-color: #c194ff;
   position: relative;
+  overflow: hidden;
   z-index: 1;
   svg {
     position: relative;
